prepping for modernization

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-requests
-discord.py
-flask
-requests
-loguru
-pony
-terminaltables
-diskcache
-fire
-faker
-ipython
-toml
+discord.py==1.7.3
+diskcache==5.4.0
+fire==0.4.0
+loguru==0.6.0
+pony==0.7.15
+PyYAML==6.0
+requests==2.22.0
+terminaltables==3.1.10
+toml==0.10.2
