--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-discord.py==1.7.3
+discord.py==2.0.1
 diskcache==5.4.0
 fire==0.4.0
+Flask==2.1.2
 loguru==0.6.0
-pony==0.7.15
+pony==0.7.16
 PyYAML==6.0
-requests==2.22.0
+requests==2.28.1
+rich==12.6.0
 terminaltables==3.1.10
 toml==0.10.2
