--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ discord.py==2.0.1
 diskcache==5.4.0
 fire==0.4.0
 Flask==2.1.2
+flask_limiter==2.6.3
 loguru==0.6.0
+markdown2==2.4.5
 pony==0.7.16
+pyfiglet==0.8.post1
 PyYAML==6.0
 requests==2.28.1
 rich==12.6.0
