--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-discord.py==2.0.1
+discord.py==2.1.0
 diskcache==5.4.0
 fire==0.4.0
 Flask==2.1.2
-flask_limiter==2.6.3
+flask_cors==3.0.10
+Flask_Limiter==2.6.3
 loguru==0.6.0
 markdown2==2.4.5
 pony==0.7.16
