updated challenge view for total value; simplified rate limit for web apps

--- a/example_challenges/r3d.toml
+++ b/example_challenges/r3d.toml
@@ -1,6 +1,6 @@
 author = "Combaticus#8292"
 challenge_title = "r3d's challenge"
-challenge_description = "good luck finding my flag"
+challenge_description = "good luck finding my flag at validator.byoctf.com"
 tags = [ "pentest",]
 [[flags]]
 flag_title = "r3d flag"
