fixing validator crashes with slow requests

--- a/example_challenges/dependent_challenge.toml
+++ b/example_challenges/dependent_challenge.toml
@@ -1,4 +1,5 @@
 author = "Combaticus#8292"
+uuid = "c8b524a6-d646-4c03-ac2e-10da3f9b7ce0"
 challenge_title = "r3d's child challenge"
 challenge_description = "good luck finding my flag"
 tags = [ "pentest",]
