--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,15 @@ fire==0.4.0
 Flask==2.3.2
 Flask_Cors==3.0.10
 Flask_Limiter==2.6.3
+locustio==0.999
 markdown2==2.4.5
 networkx==3.1
 pony==0.7.16
 pyfiglet==0.8.post1
+pyodide==0.0.2
 pyodide_http==0.2.1
 pyscript==0.2.5
 pyvis==0.3.2
-PyYAML==6.0
 PyYAML==6.0.1
 Requests==2.31.0
 terminaltables==3.1.10
