--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "fire>=0.5.0",
     "flask>=3.0.0",
     "flask_cors>=4.0.0",
-    "flask_limiter>=3.5.0",
     "PyNaCl>=1.5.0",
     "networkx>=3.1",
     "pycryptodome>=3.19.0",
@@ -27,6 +26,8 @@ dependencies = [
     "discord>=2.3.2",
     "gunicorn>=21.2.0",
     "markdown2>=2.4.10",
+    "rich>=13.7.0",
+    "flask-limiter==3.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
