--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "fire>=0.5.0",
     "flask>=3.0.0",
     "flask_cors>=4.0.0",
-    "PyNaCl>=1.5.0",
+    "pynacl>=1.5.0",
     "networkx>=3.1",
     "pycryptodome>=3.19.0",
     "pyfiglet>=0.8.post1",
@@ -28,6 +28,7 @@ dependencies = [
     "markdown2>=2.4.10",
     "rich>=13.7.0",
     "flask-limiter==3.3.0",
+    "ipython>=8.12.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
