--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "rich>=13.7.0",
     "flask-limiter==3.3.0",
     "ipython>=8.12.3",
+    "psycopg2-binary>=2.9.9",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
